# test_pulldownPanel

./: CMakeLists.txt  PulldownPanel.qml  README.md  StatusBar.qml  main.cpp  main.qml  qml.qrc
src/: pulldownmanager.cpp  pulldownmanager.h  screenimageprovider.cpp  screenimageprovider.h
